[tool.poetry]
name = "StempelWerk"
version = "1.0.1"
description = "Automatic code generation from Jinja2 templates"
authors = ["Martin Zuther <code@mzuther.de>"]
license = "BSD 3-Clause License"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
Jinja2 = "^3.1.3"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"
flake8-cognitive-complexity = "^0.1.0"
flake8-fixme = "^1.1.1"
pytest = "^7.3.0"
pytest-datafiles = "^3.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
